@@ -1,5 +1,8 @@
 2017-01-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR tree-optimization/78965
+	* gcc.dg/pr78965.c: New test.
+
 	PR middle-end/78901
 	* g++.dg/opt/pr78901.C: New test.
 
