@@ -1,5 +1,10 @@
 2017-01-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR tree-optimization/78965
+	* gimple-ssa-sprintf.c (pass_sprintf_length::compute_format_length):
+	Change first argument from const call_info & to call_info &.  For %n
+	set info.nowrite to false.
+
 	PR middle-end/78901
 	* gimple-ssa-sprintf.c (try_substitute_return_value): Don't change
 	possibly throwing calls.
